07_fault-injection/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training
  name: blue
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: blue.training.svc.cluster.local
#      fault:
#        abort:
#          httpStatus: 500
#          percentage:
#            value: 50
#        delay:
#          fixedDelay: 3s
#          percentage:
#            value: 50
